# davybot

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_CN.md  README_en.md
agent/: .env.example  .gitignore  pyproject.toml  reindex_kb.py
agent/dawei/: __init__.py  debug_main.py  server.py  server_app.py
agent/dawei/a2ui/: builder.py
agent/dawei/a2ui/extension/: __init__.py  a2ui_extension.py  a2ui_schema_utils.py  send_a2ui_to_client_toolset.py
agent/dawei/acp/: __init__.py  agent_registry.py  agent_server.py  client_adapter.py  sdk_loader.py  test_acp_agent_server.py  test_acp_client_adapter.py  test_acp_sdk_loader.py
agent/dawei/agentic/: __init__.py  agent.py  agent_config.py  agent_execution_service.py  agent_pdca_integration.py  checkpoint_manager.py  context_manager.py  conversation_compressor.py  conversation_memory_integration.py  conversation_paging.py  cost_tracker.py  domain_adapter.py  errors.py  file_reference.py  file_snapshot_manager.py  pdca_context.py  pdca_cycle_manager.py  plan_workflow.py  task_graph_excutor.py  task_node_executor.py  tool_message_handler.py  utils.py
agent/dawei/api/: __init__.py  auth.py  checkpoints.py  container_runtime.py  conversations.py  error_codes.py  exception_handlers.py  knowledge_bases.py  knowledge_documents.py  knowledge_domains.py  market.py  memory.py  privacy.py  scheduled_tasks.py  services.py  skills.py  system.py  tools.py  websocket.py
agent/dawei/api/users/: __init__.py  remote.py  security.py
agent/dawei/api/workspaces/: __init__.py  acp_agents.py  channels.py  checkpoints.py  config.py  config_reload.py  core.py  crud.py  evolution.py  files.py  graphs.py  llm.py  mcp_servers.py  memory.py  models.py  plugin_config.py  plugins.py  security.py  ui_settings.py
agent/dawei/async_task/: __init__.py  interfaces.py  task_context.py  task_manager.py  types.py  websocket_state_manager.py
agent/dawei/channels/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  bridge.py  capabilities.py  channel.py  channel_manager.py  config.py  formatter.py  health.py  retry.py  test_channels.py  webhook.py
agent/dawei/channels/bus/: events.py  message_bus.py
agent/dawei/channels/dingtalk/: __init__.py
agent/dawei/channels/discord/: __init__.py
agent/dawei/channels/email_channel/: __init__.py
agent/dawei/cli/: README.md  __init__.py  __main__.py  agent_cli.py  config.py  core.py  dawei.py  main.py  runner.py
agent/dawei/config/: __init__.py  analytics_config.py  logging_config.py  settings.py
agent/dawei/conversation/: __init__.py  conversation.py  conversation_history_manager.py
agent/dawei/core/: __init__.py  daemon.py  datetime_compat.py  decorators.py  dependency_container.py  error_handler.py  error_sanitizer.py  errors.py  events.py  exception_handler.py  exceptions.py  local_context.py  metrics.py  path_security.py  port_manager.py  security_manager.py  super_mode.py  validators.py
agent/dawei/entity/: __init__.py  llm_config.py  lm_messages.py  mode.py  scheduled_task.py  stream_message.py  system_info.py  task_types.py  tool_event_data.py  user_input_message.py
agent/dawei/evolution/: __init__.py  evolution_lock.py  evolution_manager.py  evolution_scheduler.py  evolution_storage.py  exceptions.py  prompts.py
agent/dawei/interfaces/: __init__.py  event_bus.py  llm_service.py  message_processor.py  task_executor.py  tool_call_service.py  tool_executor.py
agent/dawei/knowledge/: __init__.py  _graph_builder.py  base_manager.py  base_models.py  init.py  models.py  service.py  sync_scheduler.py
agent/dawei/llm_api/: __init__.py  base_client.py  base_llm_api.py  circuit_breaker.py  constants.py  llm_provider.py  metrics.py  model_router.py  rate_limiter.py  request_queue.py  utils.py
agent/dawei/logg/: __init__.py  logging.py  sanitize_logs.py  tool_logger.py  tui_logging.py
agent/dawei/market/: __init__.py  cli_wrapper.py  client.py  installer.py  models.py
agent/dawei/memory/: __init__.py  agent_integration.py  batch_extractor.py  database.py  gardener.py  memory_graph.py  scheduler.py  virtual_context.py
agent/dawei/mode/: __init__.py  mode_manager.py  mode_utils.py
agent/dawei/plugins/: __init__.py  base.py  config.py  loader.py  manager.py  registry.py  utils.py  validators.py
agent/dawei/prompts/: __init__.py  llm_message_builder.py  prompts_manager.py
agent/dawei/remote/: __init__.py  nat_service.py  ping_service.py
agent/dawei/sandbox/: __init__.py  command_whitelist.py  lightweight_executor.py  sandbox_manager.py  secure_executor.py
agent/dawei/storage/: __init__.py  config.py  storage.py  storage_provider.py  types.py
agent/dawei/task_graph/: __init__.py  persistence_manager.py  task_graph.py  task_node.py  task_node_data.py  task_validator.py  todo_models.py
agent/dawei/tools/: __init__.py  command_manager.py  custom_base_tool.py  magic_manager.py  magic_parser.py  mcp_tool_manager.py  scheduler.py  skill_manager.py  tool_executor.py  tool_manager.py  tool_provider.py
agent/dawei/tui/: I18N_README.md  README.md  __init__.py  __main__.py  agent_bridge.py  app.py  compile_translations.py  config.py  demo.py  i18n.py  quick_start.py  session_manager.py  test_bug_fixes.py  test_help_close.py  test_i18n.py  test_improvements.py  windows_ime_patch.py
agent/dawei/websocket/: __init__.py  manager.py  message_validation_middleware.py  protocol.py  router.py  session.py  ws_server.py
agent/dawei/workspace/: __init__.py  config_manager.py  conversation_manager.py  dawei_structure_validator.py  exceptions.py  llm_config_manager.py  models.py  persistence_helper.py  persistence_manager.py  plan_file_manager.py  scheduled_task_storage.py  security_merger.py  tool_manager_wrapper.py  user_security_settings.py  user_workspace.py  workspace_manager.py  workspace_service.py
webui/src-tauri/: Cargo.toml  stop-backend.bat  tauri.conf.json  tauri.conf.standalone.json
webui/src-tauri/icons/: README.md  icon.icns
webui/src-tauri/resources/: start-backend.bat  start-backend.sh  stop-backend.sh  welcome.html
webui/src-tauri/src/: crash_handler.rs  lib.rs  main.rs
(+574 files in other folders)
