[package]
name = "ip-agent"
version = "0.1.0"
description = "大微 - AI 助手"
authors = ["dawei Team"]
license = "Proprietary"
repository = "https://github.com/dawei/patent-agent"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"  # 用于时间戳生成
dirs = "5"  # 用于获取用户主目录

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
# Enable embedded backend (standalone version only)
standalone = []
